src/objects/Order_Center_Service_Access_Info__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Apitoken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apitoken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Center_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Center Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Detail_EndPoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Detail EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Search_Endpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Search Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Center Service Access Info</label>
</CustomObject>